# code2logic

./: .env.example  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  C2L.md  CHANGELOG.md  CHANGELOG_v2.md  CONTRIBUTING.md  DOCS.md  DOCUMENTATION.md  Dockerfile  Dockerfile.dev  MANIFEST.in  Makefile  README.md  REFACTORING_PLAN.md  ROADMAP.md  TODO.md  advanced_data_analyzer.py  advanced_yaml_optimizer.py  complexity_reduction_examples.py  context.md  context_final.md  context_fixed.md  context_improved.md  docker-compose.yml  fast_analysis.py  fast_analysis.sh  final_advanced_data_analyzer.py  fixed_advanced_data_analyzer.py  fixed_refactoring_implementation_executor.py  flow.py  function-schema.json  function.toon  general_refactoring_template.py  generate_graph_viewer.py  generate_index_html.py  goal.yaml  hybrid_export.py  litellm_config.yaml  (+48 more)
.github/workflows/: ci.yml  packages.yml
benchmarks/: benchmark_performance.py  test_performance.py
code2logic/: __init__.py  __main__.py  adaptive.py  analyzer.py  base.py  base_generator.py  benchmark.py  chunked_reproduction.py  cli.py  code_review.py  config.py  dependency.py  errors.py  file_formats.py  function_logic.py  generators.py  gherkin.py  intent.py  llm.py  llm_clients.py  llm_clients_new.py  llm_profiler.py  logicml.py  markdown_format.py  mcp_server.py  metrics.py  models.py  parsers.py  project_comparison.md  project_reproducer.py  prompts.py  py.typed  quality.py  refactor.py  reproducer.py  reproduction.py  shared_utils.py  similarity.py  terminal.py  toon_format.py  (+2 more)
code2logic/benchmarks/: __init__.py  common.py  results.py  runner.py
code2logic/core/: __init__.py
code2logic/formats/: __init__.py
code2logic/integrations/: __init__.py
code2logic/llm/: __init__.py
code2logic/schemas/: __init__.py  json_schema.py  logicml_schema.py  markdown_schema.py  yaml_schema.py
code2logic/tools/: __init__.py
docs/: 00-index.md  01-getting-started.md  02-configuration.md  03-cli-reference.md  04-python-api.md  05-output-formats.md  06-format-specifications.md  07-toon.md  08-llm-integration.md  09-llm-comparison-report.md  10-benchmark.md  11-repeatability.md  12-examples.md  13-architecture.md  14-format-analysis.md  15-logic2test.md  16-logic2code.md  17-lolm.md  18-reproduction-testing.md  19-monorepo-workflow.md  20-llm-benchmarks-claude.md  API.md  COMPARISON_AND_OPTIMIZATION.md  FORMAT_ANALYSIS.md  LLM_USAGE.md  METHODOLOGY.md  PROJECT_SUMMARY.md  architecture.md  benchmark.md  cli-reference.md  configuration.md  examples.md  format-specifications.md  getting-started.md  index.md  llm-integration.md  output-formats.md  python-api.md  repeatability.md  toon.md
examples/: 01_quick_start.py  02_refactoring.py  03_reproduction.py  04_project.py  05_llm_integration.py  06_metrics.py  07_folder_comparison.py  08_format_benchmark.py  09_async_benchmark.py  10_function_reproduction.py  11_token_benchmark.py  12_comprehensive_analysis.py  13_project_benchmark.py  14_repeatability_test.py  15_unified_benchmark.py  16_terminal_demo.py  adaptive_reproduction.py  api_documentation.py  bdd_workflow.py  behavioral_benchmark.py  benchmark_report.py  benchmark_reproduction.py  benchmark_summary.py  code_review.py  code_review_simple.py  compare_projects.py  duplicate_detection.py  functional_refactoring_example.py  generate_code.py  llm_refactor.py  mcp_litellm_refactor.py  openrouter_code_reproduction.py  openrouter_reproduction.py  project_reproduction.py  quick_start.py  refactor_suggestions.py  run_examples.sh  token_efficiency.py  universal_reproduction.py  windsurf_mcp_integration.py
examples/code2logic/: Dockerfile  README.md  docker-compose.yml
examples/logic2code/: Dockerfile  README.md  docker-compose.yml
examples/logic2test/: Dockerfile  README.md  docker-compose.yml
examples/output/: BENCHMARK_COMMANDS.sh  BENCHMARK_REPORT.md  async_benchmark.json  benchmark_behavioral.json  benchmark_format.json  benchmark_function.json  benchmark_function_logic.json  benchmark_project.json  benchmark_token.json  comprehensive_analysis.json  format_benchmark.json  function_benchmark.json  function_reproduction.json  project.csv  project.functions.toon  project.json  project.md  project.toon  project.txt  project.yaml  project_benchmark.json  refactoring_report.md  repeatability_test.json  token_benchmark.json  unified_benchmark.json  unified_benchmark_old.json
generated_code/: __init__.py  analyzer.py
logic2code/: CHANGELOG.md  Makefile  README.md  __init__.py  __main__.py  cli.py  generator.py  pyproject.toml  renderers.py
logic2code/examples/: 01_quickstart.py  02_llm_enhanced.py  README.md  sample_project.yaml
logic2code/tests/: __init__.py  test_basic.py
logic2test/: CHANGELOG.md  Makefile  README.md  __init__.py  __main__.py  cli.py  generator.py  parsers.py  pyproject.toml  templates.py
logic2test/examples/: 01_quickstart.py  02_custom_templates.py  README.md  sample_project.yaml
logic2test/tests/: __init__.py  test_basic.py
lolm/: CHANGELOG.md  Makefile  README.md  __init__.py  __main__.py  cli.py  clients.py  config.py  manager.py  project.toon  provider.py  pyproject.toml  rotation.py
lolm/examples/: 01_quickstart.py  02_configuration.py  03_code_generation.py  README.md
lolm/tests/: __init__.py  test_basic.py
output/: analysis.json  analysis.md  analysis.yaml  analysis_compact.txt  analysis_flat.json  analysis_flat.yaml  analysis_full.csv  analysis_minimal.csv  analysis_standard.csv
raport/: 1.md  2.md  README.md  mermaid-init.js
scripts/: configure_llm.py
tests/: __init__.py  conftest.py  test_all_formats.py  test_analyzer.py  test_e2e_projects.py  test_edge_cases.py  test_error_handling.py  test_format_comparison.py  test_format_specifics.py  test_formats.py  test_generators.py  test_intent.py  test_llm_priority.py  test_llm_profiler.py  test_nlp_pipeline.py  test_parser_integrity.py  test_reproduction.py  test_shared_utils.py  test_yaml_compact.py
todo/: CODE2LOGIC_V2_PROPOSAL.md  code2logic-format-comparison.md  code2logic-refactoring-plan.md  logicml.py  migrate_to_v2.py
(+120 files in other folders)
