[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "code2logic"
version = "1.0.21"
description = "Convert source code to logical representation for LLM analysis"
readme = "README.md"
license = "Apache-2.0"
authors = ["Softreck <info@softreck.dev>"]
maintainers = ["Softreck <info@softreck.dev>"]
keywords = [
    "code-analysis",
    "llm",
    "ast",
    "static-analysis",
    "tree-sitter",
    "code-understanding",
    "documentation",
    "dependency-graph",
    "nlp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
packages = [{ include = "code2logic" }]

[tool.poetry.urls]
Homepage = "https://github.com/wronai/code2logic"
Documentation = "https://code2logic.readthedocs.io"
Repository = "https://github.com/wronai/code2logic.git"
Issues = "https://github.com/wronai/code2logic/issues"
Changelog = "https://github.com/wronai/code2logic/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pyyaml = { version = ">=6.0", optional = true }
lolm = { version = ">=0.1.0", optional = true }

tree-sitter = { version = ">=0.21.0", optional = true }
tree-sitter-python = { version = ">=0.21.0", optional = true }
tree-sitter-javascript = { version = ">=0.21.0", optional = true }
tree-sitter-typescript = { version = ">=0.21.0", optional = true }
networkx = { version = ">=3.0", optional = true }
rapidfuzz = { version = ">=3.0", optional = true }
nltk = { version = ">=3.8", optional = true }
httpx = { version = ">=0.25.0", optional = true }
litellm = { version = ">=1.0.0", optional = true }

[tool.poetry.extras]
treesitter = [
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
]
graph = ["networkx"]
similarity = ["rapidfuzz"]
nlp = ["nltk"]
llm = ["lolm", "httpx", "litellm"]
full = [
    "pyyaml",
    "lolm",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "networkx",
    "rapidfuzz",
    "nltk",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = ">=4.0"
black = ">=23.0"
ruff = ">=0.1.0"
mypy = ">=1.0"
pre-commit = ">=3.0"
build = ">=1.0.0"
twine = ">=4.0.0"
bumpver = ">=2023.1129"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.5"
mkdocs-material = ">=9.0"
mkdocstrings = { version = ">=0.24", extras = ["python"] }

[tool.poetry.scripts]
code2logic = "code2logic.cli:main"
code2logic-mcp = "code2logic.mcp_server:run_server"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=code2logic",
    "--cov-report=term-missing",
    "-p",
    "no:aiohttp",
]

[tool.coverage.run]
source = ["code2logic"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["code2logic"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = [
    "tests/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = [
    "tree_sitter",
    "tree_sitter_python",
    "tree_sitter_javascript",
    "tree_sitter_typescript",
    "networkx",
    "rapidfuzz",
    "nltk",
    "spacy",
]
ignore_missing_imports = true

[tool.bumpver]
current_version = "1.0.21"
version_pattern = "MAJOR.MINOR.PATCH"
commit = false
tag = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    "^version = \"{version}\"",
    "^current_version = \"{version}\"",
]
"code2logic/__init__.py" = ["__version__ = \"{version}\""]