[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code2flow"
version = "0.2.1"
description = "High-performance Python code flow analysis with NLP query processing - CFG, DFG, call graphs, and intelligent code queries"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    {name = "STTS Project"},
    {name = "Tom Sapletta", email = "tom@sapletta.com"},
]
keywords = [
    "static-analysis",
    "control-flow",
    "data-flow",
    "call-graph",
    "reverse-engineering",
    "nlp",
    "code-analysis",
    "ast"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "networkx>=2.6",
    "matplotlib>=3.4",
    "pyyaml>=5.4",
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2",
    "pytest-cov>=2.12",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910",
]

[project.scripts]
code2flow = "code2flow.cli:main"

[project.urls]
Homepage = "https://github.com/wronai/stts"
Repository = "https://github.com/wronai/stts"
Issues = "https://github.com/wronai/stts/issues"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
