[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lolm"
version = "0.1.8"
description = "Lightweight Orchestrated LLM Manager - Multi-provider LLM configuration and management"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "WronAI", email = "contact@wronai.com"}
]
keywords = [
    "llm",
    "openrouter",
    "ollama",
    "groq",
    "litellm",
    "ai",
    "machine-learning",
    "code-generation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
litellm = [
    "litellm>=1.0.0",
]
full = [
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/wronai/code2logic"
Documentation = "https://code2logic.readthedocs.io/en/latest/lolm/"
Repository = "https://github.com/wronai/code2logic/tree/main/lolm"
Issues = "https://github.com/wronai/code2logic/issues"

[project.scripts]
lolm = "lolm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lolm*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
